--- a/VentanasJava/src/ventanas/FormularioDos.form
+++ b/VentanasJava/src/ventanas/FormularioDos.form
@@ -8,6 +8,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="componentMoved" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="formComponentMoved"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -66,6 +69,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Mensaje:"/>
       </Properties>
+      <Events>
+        <EventHandler event="componentResized" listener="java.awt.event.ComponentListener" parameters="java.awt.event.ComponentEvent" handler="txtlabelComponentResized"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="texField">
     </Component>
