cracion de un boton2

--- a/DPOII_U1_EA_RARP/src/Windows/Examen.form
+++ b/DPOII_U1_EA_RARP/src/Windows/Examen.form
@@ -233,6 +233,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JSpinner" name="jSpinner1">
+      <Events>
+        <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="jSpinner1StateChanged"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="jTextField2">
       <Properties>
